--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     				<h1>About</h1>
     				<h6>Myself</h6>
     			</div>
-    			<p>I'm Kritika, a third year graduate student from University of VIT Bhopal.<br> I also love to read, do painting and photography .
+    			<p>I'm Kritika, a third year undergraduate student pursuing B.tech from VIT Bhopal University.<br>In free time I love to read books.
     			</p>
     			<div class="social-media">
     			<ul class="nav-list">
