--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     			<label for="name">Name:</label>
     			<input type="text" id="name" name="name" placeholder="Enter your name ..." required="">
     			<label for="name">Email:</label>
-    			<input type="text" id="Email" name="Email" placeholder="Enter your Email ...." required="">
+    			<input type="text" id="Email" name="Email" placeholder="Enter your Email ..." required="">
     			<label for ="textarea">Comments</label>
     			<textarea name="textarea" id="textarea" cols="10" rows="10" ></textarea>
     			<input type="submit" name="submit" value="Submit"><br><br><br>
