--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     				<h1>About</h1>
     				<h6>Myself</h6>
     			</div>
-    			<p>I'm Kritika, a third year undergraduate student pursuing B.tech from VIT Bhopal University.In free time I love to read books.
+    			<p>I am Kritika Sagar, a third year undergraduate student pursuing B.tech from VIT Bhopal University. My fields of interests are algorithms, databases and operating systems. My other hobbies include photography, do check out my instagram page. 
     			</p>
     			<div class="social-media">
     			<ul class="nav-list">
