working contact form

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     			<h1>Contact</h1>
     			<h6>You can contact me here</h6>
     		</div>
-    		<form action="">
+    		<form name="input" method="POST" action="https://formspree.io/Kritikalife03@gmail.com">
     			<label for="name">Name:</label>
     			<input type="text" id="name" name="name" placeholder="Enter your name ..." required="">
     			<label for="name">Email:</label>
