--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     				<h1>About</h1>
     				<h6>Myself</h6>
     			</div>
-    			<p>I am Kritika Sagar, a third year undergraduate student pursuing B.tech from VIT Bhopal University. My fields of interests are algorithms and databases .Using knowledge of technology which is creatively desgined.My other hobbies include photography, do check out my instagram page. 
+    			<p>I am Kritika Sagar, a third year undergraduate student pursuing B.tech from VIT Bhopal University. My fields of interests are algorithms and databases .Using knowledge of technology which is creatively desgined.My other hobbies include photography, do check out my Viewbug page. 
     			</p>
     			<div class="social-media">
     			<ul class="nav-list">
     				<li>
-    					<a href="https://www.instagram.com/kritikasagar37/" class="icon-link">
-    						<i class="fab fa-instagram"></i>
+    					<a href="https://www.viewbug.com/member/Kritika3" class="icon-link">
+    						<i class="fa fa-camera"></i>
     					</a>
     				</li>
     				<li>
