--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     				<h1>About</h1>
     				<h6>Myself</h6>
     			</div>
-    			<p>I am Kritika Sagar, a third year undergraduate student pursuing B.tech from VIT Bhopal University. My fields of interests are algorithms and databases .Using knowledge of technology which is creatively desgined.My other hobbies include photography, do check out my Viewbug page. 
+    			<p>I am Kritika Sagar, a final year CSE undergraduate student pursuing B.tech from VIT Bhopal University. My fields of interests are algorithms and databases .Using knowledge of technology which is creatively desgined.My other hobbies include photography, do check out my Viewbug page. 
     			</p>
     			<div class="social-media">
     			<ul class="nav-list">
